Modificando los archivos y reorganizando

--- a/dinner-combo.html
+++ b/dinner-combo.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="static/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -21,12 +21,12 @@
 <header>
     <nav id="header-nav" class="navbar navbar-expand-lg navbar-light bg-warning">
         <a class="navbar-brand d-none d-lg-block" href="index.html">
-            <img id="logo" src="../static/images/restaurant-logo.png" alt="Logo-image">
+            <img id="logo" src="static/images/restaurant-logo.png" alt="Logo-image">
         </a>
 
         <div id="navbar-brand" class="navbar-brand align-self-start">
             <a href="index.html"><h1>David Chu's China Bistro</h1></a>
-            <p><img src="../static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
+            <p><img src="static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
         </div>
 
         <button id="button1" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsable-nav"
@@ -97,7 +97,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>F1</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/F/F-1.jpg"
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/F/F-1.jpg"
                              alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
@@ -116,7 +116,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>F4</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/F/F-4.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/F/F-4.jpg" alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
                 </div>
@@ -136,7 +136,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>F5</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/F/F-5.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/F/F-5.jpg" alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
                 </div>
@@ -153,7 +153,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>C6</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/C/C-6.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/C/C-6.jpg" alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
                 </div>
@@ -173,7 +173,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>C5</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/C/C-5.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/C/C-5.jpg" alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
                 </div>
@@ -190,7 +190,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>VG11</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-11.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Vg/Vg-11.jpg" alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
                 </div>
@@ -207,7 +207,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>VG3</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-3.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Vg/Vg-3.jpg" alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
                 </div>
@@ -224,7 +224,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>C2</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/C/C-2.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/C/C-2.jpg" alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
                 </div>
@@ -241,7 +241,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>VG9</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-9.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Vg/Vg-9.jpg" alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
                 </div>
@@ -258,7 +258,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>C10</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/C/C-10.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/C/C-10.jpg" alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
                 </div>
@@ -275,7 +275,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>NL2</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/NL/NL-2.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/NL/NL-2.jpg" alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
                 </div>
@@ -292,7 +292,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>VG2</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-1.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Vg/Vg-1.jpg" alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
                 </div>
@@ -309,7 +309,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>C1</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/C/C-1.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/C/C-1.jpg" alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
                 </div>
@@ -326,7 +326,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>C7</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/C/C-7.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/C/C-7.jpg" alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
                 </div>
@@ -343,7 +343,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>C15</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/C/C-15.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/C/C-15.jpg" alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
                 </div>
@@ -360,7 +360,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>F4</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/F/F-4.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/F/F-4.jpg" alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
                 </div>
@@ -377,7 +377,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>F5</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/F/F-5.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/F/F-5.jpg" alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
                 </div>
@@ -394,7 +394,7 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>VG12</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-12.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Vg/Vg-12.jpg" alt="Item">
                     </div>
                     <div class="menu-item-price">$16.95</div>
                 </div>
