--- a/menu-categories.html
+++ b/menu-categories.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="static/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -21,12 +21,12 @@
 <header>
     <nav id="header-nav" class="navbar navbar-expand-lg navbar-light bg-warning">
         <a class="navbar-brand d-none d-lg-block" href="index.html">
-            <img id="logo" src="../static/images/restaurant-logo.png" alt="Logo-image">
+            <img id="logo" src="static/images/restaurant-logo.png" alt="Logo-image">
         </a>
 
         <div id="navbar-brand" class="navbar-brand align-self-start">
             <a href="index.html"><h1>David Chu's China Bistro</h1></a>
-            <p><img src="../static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
+            <p><img src="static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
         </div>
 
         <button id="button1" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsable-nav"
@@ -97,7 +97,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="lunch.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/C/C.jpg" alt="Lunch">
+                    <img width="200" height="200" src="static/images/menu/C/C.jpg" alt="Lunch">
                     <span>Lunch</span>
                 </div>
             </a>
@@ -106,7 +106,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="soup.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/A/A.jpg" alt="Soup">
+                    <img width="200" height="200" src="static/images/menu/A/A.jpg" alt="Soup">
                     <span>Soup</span>
                 </div>
             </a>
@@ -115,7 +115,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="appetizers.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/B/B.jpg" alt="Appetizers">
+                    <img width="200" height="200" src="static/images/menu/B/B.jpg" alt="Appetizers">
                     <span>Appetizers</span>
                 </div>
             </a>
@@ -124,7 +124,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="chef-recomendations.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/Sp/Sp.jpg" alt="Chef's Recommendations">
+                    <img width="200" height="200" src="static/images/menu/Sp/Sp.jpg" alt="Chef's Recommendations">
                     <span>Chef's Recommendations</span>
                 </div>
             </a>
@@ -133,7 +133,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="chicken.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/C/C.jpg" alt="Chicken">
+                    <img width="200" height="200" src="static/images/menu/C/C.jpg" alt="Chicken">
                     <span>Chicken</span>
                 </div>
             </a>
@@ -142,7 +142,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="beef.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/F/F.jpg" alt="Beef">
+                    <img width="200" height="200" src="static/images/menu/F/F.jpg" alt="Beef">
                     <span>Beef</span>
                 </div>
             </a>
@@ -151,7 +151,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="veal.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/F/F-2.jpg" alt="Veal">
+                    <img width="200" height="200" src="static/images/menu/F/F-2.jpg" alt="Veal">
                     <span>Veal</span>
                 </div>
             </a>
@@ -160,7 +160,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="duck.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/Dk/Dk.jpg" alt="Duck">
+                    <img width="200" height="200" src="static/images/menu/Dk/Dk.jpg" alt="Duck">
                     <span>Duck</span>
                 </div>
             </a>
@@ -169,7 +169,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="vegetables.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/Vg/Vg.jpg" alt="Vegetables">
+                    <img width="200" height="200" src="static/images/menu/Vg/Vg.jpg" alt="Vegetables">
                     <span>Vegetables</span>
                 </div>
             </a>
@@ -178,7 +178,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="curry.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/C2/C2.jpg" alt="Curry">
+                    <img width="200" height="200" src="static/images/menu/C2/C2.jpg" alt="Curry">
                     <span>Curry</span>
                 </div>
             </a>
@@ -187,7 +187,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="noodles.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/NL/NL.jpg" alt="Noodles(Lo Mein)">
+                    <img width="200" height="200" src="static/images/menu/NL/NL.jpg" alt="Noodles(Lo Mein)">
                     <span>Noodles(Lo Mein)</span>
                 </div>
             </a>
@@ -196,7 +196,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="mei-fan.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/NF/NF.jpg" alt="Mei Fan (Very Fine Noodles)">
+                    <img width="200" height="200" src="static/images/menu/NF/NF.jpg" alt="Mei Fan (Very Fine Noodles)">
                     <span>Mei Fan (Very Fine Noodles)</span>
                 </div>
             </a>
@@ -205,7 +205,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="pan-fried-noodles.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/Pf/Pf.jpg" alt="Pan Fried Noodles">
+                    <img width="200" height="200" src="static/images/menu/Pf/Pf.jpg" alt="Pan Fried Noodles">
                     <span>Pan Fried Noodles</span>
                 </div>
             </a>
@@ -214,7 +214,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="fried-rice.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/Fr/Fr.jpg" alt="Fried Rice">
+                    <img width="200" height="200" src="static/images/menu/Fr/Fr.jpg" alt="Fried Rice">
                     <span>Fried Rice</span>
                 </div>
             </a>
@@ -223,7 +223,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="chow-mein.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/Cm/Cm.jpg" alt="Chow Mein">
+                    <img width="200" height="200" src="static/images/menu/Cm/Cm.jpg" alt="Chow Mein">
                     <span>Chow Mein</span>
                 </div>
             </a>
@@ -232,7 +232,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="side-orders.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/SO/SO.jpg" alt="Side Orders">
+                    <img width="200" height="200" src="static/images/menu/SO/SO.jpg" alt="Side Orders">
                     <span>Side Orders</span>
                 </div>
             </a>
@@ -241,7 +241,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="desserts.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/DS/DS.jpg" alt="Desserts">
+                    <img width="200" height="200" src="static/images/menu/DS/DS.jpg" alt="Desserts">
                     <span>Desserts</span>
                 </div>
             </a>
@@ -250,7 +250,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="dinner-combo.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/C/C-10.jpg" alt="Dinner Combo">
+                    <img width="200" height="200" src="static/images/menu/C/C-10.jpg" alt="Dinner Combo">
                     <span>Dinner Combo</span>
                 </div>
             </a>
@@ -259,7 +259,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
             <a href="sushi.html">
                 <div class="category-tile">
-                    <img width="200" height="200" src="../static/images/menu/SR/SR.jpg" alt="Sushi Menu">
+                    <img width="200" height="200" src="static/images/menu/SR/SR.jpg" alt="Sushi Menu">
                     <span>Sushi Menu</span>
                 </div>
             </a>
