--- a/side-orders.html
+++ b/side-orders.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="static/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -21,12 +21,12 @@
 <header>
     <nav id="header-nav" class="navbar navbar-expand-lg navbar-light bg-warning">
         <a class="navbar-brand d-none d-lg-block" href="index.html">
-            <img id="logo" src="../static/images/restaurant-logo.png" alt="Logo-image">
+            <img id="logo" src="static/images/restaurant-logo.png" alt="Logo-image">
         </a>
 
         <div id="navbar-brand" class="navbar-brand align-self-start">
             <a href="index.html"><h1>David Chu's China Bistro</h1></a>
-            <p><img src="../static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
+            <p><img src="static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
         </div>
 
         <button id="button1" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsable-nav"
@@ -87,21 +87,20 @@
 
 
 <div id="main-content" class="container">
-    <h2 id="menu-categories-title" class="text-center my-5">Chow Mein Menu</h2>
+    <h2 id="menu-categories-title" class="text-center my-5">Side Orders Menu</h2>
 
     <section class="row">
         <div class="menu-item-tile col-md-6">
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>CM2</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Cm/Cm-2.jpg" alt="Item">
+                        <div>SO6</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SO/SO-6.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$12.95 <span> (pint)</span> $15.95 <span>(large)</span></div>
+                    <div class="menu-item-price">$2.50 </div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Chicken Chow Mein</h3>
-                    <p class="menu-item-details">white meat chicken sauteed with bean sprouts, onions, and celery in white sauce</p>
+                    <h3 class="menu-item-title">Fortune Cookies (12)</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none">
@@ -111,14 +110,13 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>CM1</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Cm/Cm-1.jpg" alt="Item">
+                        <div>SO3</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SO/SO-3.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$11.95 <span> (pint)</span> $14.95 <span>(large)</span></div>
+                    <div class="menu-item-price">$3.50 <span> (pint)</span> $6.50 <span>(large)</span></div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Vegetable Chow Mein</h3>
-                    <p class="menu-item-details">broccoli, snow peas, onions, bean sprouts, and celery sauteed with white sauce</p>
+                    <h3 class="menu-item-title">Brown Rice</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none">
@@ -128,14 +126,13 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>CM4</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Cm/Cm-4.jpg" alt="Item">
+                        <div>SO1</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SO/SO-1.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$13.95 <span> (pint)</span> $16.95 <span>(large)</span></div>
+                    <div class="menu-item-price">$9.50 </div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Veal Chow Mein</h3>
-                    <p class="menu-item-details">veal sauteed with bean sprouts, onions, and celery in brown sauce</p>
+                    <h3 class="menu-item-title">Chicken Nuggets with French Fries</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none">
@@ -146,13 +143,12 @@
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
                         <div>SO2</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Cm/Cm-3.jpg" alt="Item">
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SO/SO-2.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$12.95 <span> (pint)</span> $15.95 <span>(large)</span></div>
+                    <div class="menu-item-price">$5.95 </div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Beef Chow Mein</h3>
-                    <p class="menu-item-details">beef sauteed with bean sprouts, onions, and celery in brown sauce</p>
+                    <h3 class="menu-item-title">French Fries</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none">
@@ -162,18 +158,34 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>CM5</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Cm/Cm-5.jpg" alt="Item">
+                        <div>SO5</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SO/SO-5.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$14.95 <span> (pint)</span> $17.95 <span>(large)</span></div>
+                    <div class="menu-item-price">$3.50 <span> (pint)</span> $6.50 <span>(large)</span></div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">House Special Chow Mein</h3>
-                    <p class="menu-item-details">veal, beef, and chicken sauteed with bean sprouts, onions, and celery in brown sauce</p>
+                    <h3 class="menu-item-title">Extra Fried Rice</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none">
         </div>
+
+        <div class="menu-item-tile col-md-6">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="menu-item-photo">
+                        <div>SO4</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SO/SO-4.jpg" alt="Item">
+                    </div>
+                    <div class="menu-item-price">$3.50 <span> (pint)</span> $6.50 <span>(large)</span></div>
+                </div>
+                <div class="menu-item-description col-sm-6">
+                    <h3 class="menu-item-title">Extra White Rice</h3>
+                </div>
+            </div>
+            <hr class="d-none d-block d-sm-none">
+        </div>
+
 
         <!-- Add after every 2nd menu-item-tile -->
          <div class="clearfix d-none d-md-block d-lg-none"></div>
