--- a/sushi.html
+++ b/sushi.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="static/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -21,12 +21,12 @@
 <header>
     <nav id="header-nav" class="navbar navbar-expand-lg navbar-light bg-warning">
         <a class="navbar-brand d-none d-lg-block" href="index.html">
-            <img id="logo" src="../static/images/restaurant-logo.png" alt="Logo-image">
+            <img id="logo" src="static/images/restaurant-logo.png" alt="Logo-image">
         </a>
 
         <div id="navbar-brand" class="navbar-brand align-self-start">
             <a href="index.html"><h1>David Chu's China Bistro</h1></a>
-            <p><img src="../static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
+            <p><img src="static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
         </div>
 
         <button id="button1" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsable-nav"
@@ -87,22 +87,22 @@
 
 
 <div id="main-content" class="container">
-    <h2 id="menu-categories-title" class="text-center mt-5">Vegetables Menu</h2>
+    <h2 id="menu-categories-title" class="text-center mt-5">Sushi Menu</h2>
+    <div class="text-center">Contains raw ingredients. Consuming raw or undercooked meat, poultry, or seafood may increase your risk of food borne illness.</div>
 
     <section class="row">
         <div class="menu-item-tile col-md-6">
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>VG1</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-1.jpg"
+                        <div>SR2</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SR/SR-2.jpg"
                              alt="Item">
                     </div>
-                    <div class="menu-item-price">$11.75<span> (pint)</span> $13.75 <span>(large)</span></div>
+                    <div class="menu-item-price">$6.00</div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Wok's Mixed Vegetables</h3>
-                    <p class="menu-item-details">broccoli, carrots, baby corn, water chestnuts, mushrooms, and snow peas sauteed in brown sauce</p>
+                    <h3 class="menu-item-title">Asparagus Sushi Roll</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none">
@@ -113,14 +113,13 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>VG11</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-11.jpg" alt="Item">
+                        <div>SR3</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SR/SR-3.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$11.75<span> (pint)</span> $13.75 <span>(large)</span></div>
+                    <div class="menu-item-price">$6.00</div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Bean Curd with Mushrooms</h3>
-                    <p class="menu-item-details">bean curd sauteed with black mushrooms and regular mushrooms in brown sauce</p>
+                    <h3 class="menu-item-title">Avocado Sushi Roll</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
@@ -133,14 +132,13 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>VG10</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-10.jpg" alt="Item">
+                        <div>SR5</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SR/SR-5.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$11.75<span> (pint)</span> $13.75 <span>(large)</span></div>
+                    <div class="menu-item-price">$7.00</div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Bean Curd with Mixed Vegetables</h3>
-                    <p class="menu-item-details">Tofu lightly breaded and fried and sauteed with carrots, broccoli, snow peas, string beans, water chestnuts, and mushrooms in brown sauce</p>
+                    <h3 class="menu-item-title">California Roll</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
@@ -150,14 +148,13 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>VG9</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-9.jpg" alt="Item">
+                        <div>SR1</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SR/SR-1.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$11.75<span> (pint)</span> $13.75 <span>(large)</span></div>
+                    <div class="menu-item-price">$5.50</div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Bean Curd, Hunan Style</h3>
-                    <p class="menu-item-details">bean curd lightly fried then sauteed with green pepper, snow peas, and water chestnuts in brown sauce</p>
+                    <h3 class="menu-item-title">Cucumber Sushi Roll</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
@@ -170,14 +167,13 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>VG8</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-8.jpg" alt="Item">
+                        <div>SR9</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SR/SR-9.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$11.75<span> (pint)</span> $13.75 <span>(large)</span></div>
+                    <div class="menu-item-price">$7.50</div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Bean Curd, Szechuan Style</h3>
-                    <p class="menu-item-details">silky soft bean curd braised in chef's brown sauce</p>
+                    <h3 class="menu-item-title">Salmon Skin & Cucumber Sushi Roll</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
@@ -187,14 +183,13 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>VG5</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-5.jpg" alt="Item">
+                        <div>SR11</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SR/SR-11.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$11.75<span> (pint)</span> $13.75 <span>(large)</span></div>
+                    <div class="menu-item-price">$7.50</div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Broccoli Sauteed wtih Mushrooms in Light Sauce</h3>
-                    <p class="menu-item-details">broccoli sauteed with fresh mushrooms in white sauce</p>
+                    <h3 class="menu-item-title">Salmon and Avocado Sushi Roll</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
@@ -204,14 +199,13 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>VG4</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-4.jpg" alt="Item">
+                        <div>SR6</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SR/SR-6.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$11.75<span> (pint)</span> $13.75 <span>(large)</span></div>
+                    <div class="menu-item-price">$6.50</div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Crispy Eggplant in Garlic Sauce</h3>
-                    <p class="menu-item-details">breaded and fried eggplants sauteed in sweet garlic sauce and sesame seeds</p>
+                    <h3 class="menu-item-title">Salmon Sushi Roll</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
@@ -221,14 +215,13 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>VG3</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-3.jpg" alt="Item">
+                        <div>SR13</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SR/SR-13.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$11.75<span> (pint)</span> $13.75 <span>(large)</span></div>
+                    <div class="menu-item-price">$7.50</div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Eggplant in Garlic Sauce</h3>
-                    <p class="menu-item-details">eggplant sauteed with water chestnuts and string beans in garlic sauce</p>
+                    <h3 class="menu-item-title">Spicy Tuna Sushi Roll</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
@@ -238,14 +231,13 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>VG6</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-6.jpg" alt="Item">
+                        <div>SR7</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SR/SR-7.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$11.75<span> (pint)</span> $13.75 <span>(large)</span></div>
+                    <div class="menu-item-price">$6.50</div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Moo Shu Vegetables</h3>
-                    <p class="menu-item-details">shredded cabbage sauteed with mushrooms, carrots, and scrambled eggs</p>
+                    <h3 class="menu-item-title">Tuna Sushi Roll</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
@@ -255,14 +247,13 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>VG12</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-12.jpg" alt="Item">
+                        <div>SR10</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SR/SR-10.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$11.75<span> (pint)</span> $13.75 <span>(large)</span></div>
+                    <div class="menu-item-price">$7.50</div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Orange Bean Curd</h3>
-                    <p class="menu-item-details">Tofu lightly breaded and fried and sauteed with orange peel in sweet brown sauce</p>
+                    <h3 class="menu-item-title">Tuna and Avocado Sushi Roll</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
@@ -272,14 +263,13 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>VG14</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-14.jpg" alt="Item">
+                        <div>SR12</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SR/SR-12.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$11.75<span> (pint)</span> $13.75 <span>(large)</span></div>
+                    <div class="menu-item-price">$7.50</div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Sauteed Bean Sprouts</h3>
-                    <p class="menu-item-details">fresh bean sprouts sauteed with scallions</p>
+                    <h3 class="menu-item-title">Yellowtail and Avocado Sushi Roll</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
@@ -289,14 +279,13 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>VG7</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-7.jpg" alt="Item">
+                        <div>SR8</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SR/SR-8.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$11.75<span> (pint)</span> $13.75 <span>(large)</span></div>
+                    <div class="menu-item-price">$7.00</div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Sauteed Snow Peas & Waterchestnuts in Brown Sauce</h3>
-                    <p class="menu-item-details">snow peas and water chestnuts sauteed in brown sauce</p>
+                    <h3 class="menu-item-title">Yellowtail Roll</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
@@ -306,14 +295,61 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>VG2</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Vg/Vg-2.jpg" alt="Item">
+                        <div>SR15</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SR/SR-15.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$11.75<span> (pint)</span> $13.75 <span>(large)</span></div>
+                    <div class="menu-item-price">$7.50</div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Sauteed String Beans, Szechuan</h3>
-                    <p class="menu-item-details">onions and string beans sauteed with chef's sauce</p>
+                    <h3 class="menu-item-title">Fried Sweet Potato Sushi Roll</h3>
+                </div>
+            </div>
+            <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
+        </div>
+
+        <div class="menu-item-tile col-md-6">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="menu-item-photo">
+                        <div>SR16</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SR/SR-16.jpg" alt="Item">
+                    </div>
+                    <div class="menu-item-price">$7.50</div>
+                </div>
+                <div class="menu-item-description col-sm-6">
+                    <h3 class="menu-item-title">Philadelphia Sushi Roll</h3>
+                </div>
+            </div>
+            <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
+        </div>
+
+        <div class="menu-item-tile col-md-6">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="menu-item-photo">
+                        <div>SR14</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SR/SR-14.jpg" alt="Item">
+                    </div>
+                    <div class="menu-item-price">$7.50</div>
+                </div>
+                <div class="menu-item-description col-sm-6">
+                    <h3 class="menu-item-title">Spicy Salmon Sushi Roll</h3>
+                </div>
+            </div>
+            <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
+        </div>
+
+        <div class="menu-item-tile col-md-6">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="menu-item-photo">
+                        <div>SR4</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/SR/SR-4.jpg" alt="Item">
+                    </div>
+                    <div class="menu-item-price">$7.50</div>
+                </div>
+                <div class="menu-item-description col-sm-6">
+                    <h3 class="menu-item-title">Garden Vegetable Sushi Roll</h3>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
