--- a/awards.html
+++ b/awards.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="static/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -21,12 +21,12 @@
 <header>
     <nav id="header-nav" class="navbar navbar-expand-lg navbar-light bg-warning">
         <a class="navbar-brand d-none d-lg-block" href="index.html">
-            <img id="logo" src="../static/images/restaurant-logo.png" alt="Logo-image">
+            <img id="logo" src="static/images/restaurant-logo.png" alt="Logo-image">
         </a>
 
         <div id="navbar-brand" class="navbar-brand align-self-start">
             <a href="index.html"><h1>David Chu's China Bistro</h1></a>
-            <p><img src="../static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
+            <p><img src="static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
         </div>
 
         <button id="button1" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsable-nav"
@@ -87,63 +87,12 @@
 
 
 <div id="main-content" class="container">
-    <h2 id="menu-categories-title" class="text-center my-5">Curry Menu</h2>
+    <h2 class="text-center my-5">Awards</h2>
 
-    <section class="row">
-        <div class="menu-item-tile col-md-6">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="menu-item-photo">
-                        <div>C22</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/C2/C2-2.jpg" alt="Item">
-                    </div>
-                    <div class="menu-item-price">$15.45 <span> (pint)</span> $21.55 <span>(large)</span></div>
-                </div>
-                <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Curry Veal</h3>
-                    <p class="menu-item-details">veal sauteed with ionions, peas, carrots, and broccoli</p>
-                </div>
-            </div>
-            <hr class="d-none d-block d-sm-none">
-        </div>
+    <p class="text-center">David Chu's China Bistro is a recepient of multiple awards for its great food and service.</p>
 
-        <div class="menu-item-tile col-md-6">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="menu-item-photo">
-                        <div>C21</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/C2/C2-1.jpg" alt="Item">
-                    </div>
-                    <div class="menu-item-price">$14.25 <span> (pint)</span> $18.25 <span>(large)</span></div>
-                </div>
-                <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Curry Chicken</h3>
-                    <p class="menu-item-details">white meat chicken sauteed with ionions, peas, carrots, and broccoli</p>
-                </div>
-            </div>
-            <hr class="d-none d-block d-sm-none">
-        </div>
+    <p class="text-center">Details are coming soon.</p>
 
-        <div class="menu-item-tile col-md-6">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="menu-item-photo">
-                        <div>C22</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/C2/C2-2.jpg" alt="Item">
-                    </div>
-                    <div class="menu-item-price">$11.25 <span> (pint)</span> $14.25 <span>(large)</span></div>
-                </div>
-                <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Curry Beef</h3>
-                    <p class="menu-item-details">beef sauteed with ionions, peas, carrots, and broccoli</p>
-                </div>
-            </div>
-            <hr class="d-none d-block d-sm-none">
-        </div>
-
-        <!-- Add after every 2nd menu-item-tile -->
-         <div class="clearfix d-none d-md-block d-lg-none"></div>
-    </section>
 </div><!-- End of #main-content -->
 
 
