--- a/chef-recomendations.html
+++ b/chef-recomendations.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="static/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -21,12 +21,12 @@
 <header>
     <nav id="header-nav" class="navbar navbar-expand-lg navbar-light bg-warning">
         <a class="navbar-brand d-none d-lg-block" href="index.html">
-            <img id="logo" src="../static/images/restaurant-logo.png" alt="Logo-image">
+            <img id="logo" src="static/images/restaurant-logo.png" alt="Logo-image">
         </a>
 
         <div id="navbar-brand" class="navbar-brand align-self-start">
             <a href="index.html"><h1>David Chu's China Bistro</h1></a>
-            <p><img src="../static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
+            <p><img src="static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
         </div>
 
         <button id="button1" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsable-nav"
@@ -87,96 +87,155 @@
 
 
 <div id="main-content" class="container">
-    <h2 id="menu-categories-title" class="text-center my-5">Pan Fried Noodles Menu</h2>
+    <h2 id="menu-categories-title" class="text-center my-5">Chef's Recommendations Menu</h2>
 
     <section class="row">
         <div class="menu-item-tile col-md-6">
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>PF2</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Pf/Pf-2.jpg" alt="Item">
+                        <div>SP1</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Sp/Sp-1.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$19.95 </div>
+                    <div class="menu-item-price">$21.95</div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Pan Fried Noodles with Chicken</h3>
-                    <p class="menu-item-details">white meat chicken sauteed with broccoli, snow peas, mushrooms, water chestnuts, and carrots with brown sauce on a bed of crispy crunchy noodles</p>
+                    <h3 class="menu-item-title">Chinese Scallion Pancake Wrap</h3>
+                    <p class="menu-item-details">with choice of string bean, string bean chicken, string bean beef, beef onions, moo shu vegetable</p>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none">
         </div>
 
-        <div class="menu-item-tile col-md-6">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="menu-item-photo">
-                        <div>PF3</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Pf/Pf-3.jpg" alt="Item">
-                    </div>
-                    <div class="menu-item-price">$19.95 </div>
-                </div>
-                <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Pan Fried Noodles with Beef</h3>
-                    <p class="menu-item-details">sliced beef sauteed with broccoli, snow peas, mushrooms, water chestnuts, and carrots with brown sauce on a bed of crispy crunchy noodles</p>
-                </div>
-            </div>
-            <hr class="d-none d-block d-sm-none">
-        </div>
 
         <div class="menu-item-tile col-md-6">
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>PF4</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Pf/Pf-4.jpg" alt="Item">
+                        <div>SP5</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Sp/Sp-5.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$20.95 </div>
+                    <div class="menu-item-price">$22.95</div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Pan Fried Noodles with Veal</h3>
-                    <p class="menu-item-details">sliced veal sauteed with broccoli, snow peas, mushrooms, water chestnuts, and carrots with brown sauce on a bed of crispy crunchy noodles</p>
+                    <h3 class="menu-item-title">Happy Family</h3>
+                    <p class="menu-item-details">beef, veal, and chicken sauteed with mixed vegetables in chef's special sauce; lo mein served on the side</p>
                 </div>
             </div>
-            <hr class="d-none d-block d-sm-none">
-        </div>
-
-        <div class="menu-item-tile col-md-6">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="menu-item-photo">
-                        <div>PF1</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Pf/Pf-1.jpg" alt="Item">
-                    </div>
-                    <div class="menu-item-price">$15.95 </div>
-                </div>
-                <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Pan Fried Noodles with Vegetables</h3>
-                    <p class="menu-item-details">broccoli, snow peas, mushrooms, water chestnuts, and carrots sauteed with brown sauce on a bed of crispy crunchy noodles</p>
-                </div>
-            </div>
-            <hr class="d-none d-block d-sm-none">
-        </div>
-
-        <div class="menu-item-tile col-md-6">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="menu-item-photo">
-                        <div>PF5</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/Pf/Pf-5.jpg" alt="Item">
-                    </div>
-                    <div class="menu-item-price">$21.95 </div>
-                </div>
-                <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">House Special Pan Fried Noodles</h3>
-                    <p class="menu-item-details">veal, beef, and chicken sauteed with broccoli, snow peas, mushrooms, water chestnuts, and carrots with brown sauce on a bed of crispy crunchy noodles</p>
-                </div>
-            </div>
-            <hr class="d-none d-block d-sm-none">
+            <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
         </div>
 
         <!-- Add after every 2nd menu-item-tile -->
          <div class="clearfix d-none d-md-block d-lg-none"></div>
+
+        <div class="menu-item-tile col-md-6">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="menu-item-photo">
+                        <div>SP8</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Sp/Sp-8.jpg" alt="Item">
+                    </div>
+                    <div class="menu-item-price">$21.95</div>
+                </div>
+                <div class="menu-item-description col-sm-6">
+                    <h3 class="menu-item-title">Sesame Beef</h3>
+                    <p class="menu-item-details">a few cuts of beef, breaded, deep-fried with sauce containing sesame seeds; served with lo mein on the side</p>
+                </div>
+            </div>
+            <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
+        </div>
+
+        <div class="menu-item-tile col-md-6">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="menu-item-photo">
+                        <div>SP4</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Sp/Sp-4.jpg" alt="Item">
+                    </div>
+                    <div class="menu-item-price">$22.95</div>
+                </div>
+                <div class="menu-item-description col-sm-6">
+                    <h3 class="menu-item-title">Orange Chicken and Beef Combo</h3>
+                    <p class="menu-item-details">white meat chicken and beef, breaded and deep-fried with special house sauce; served with lo mein and vegetables</p>
+                </div>
+            </div>
+            <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
+        </div>
+
+        <!-- Add after every 2nd menu-item-tile -->
+         <div class="clearfix d-none d-md-block d-lg-none"></div>
+
+        <div class="menu-item-tile col-md-6">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="menu-item-photo">
+                        <div>SP3</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Sp/Sp-3.jpg" alt="Item">
+                    </div>
+                    <div class="menu-item-price">$19.95</div>
+                </div>
+                <div class="menu-item-description col-sm-6">
+                    <h3 class="menu-item-title">Vegetable Tempura</h3>
+                    <p class="menu-item-details">assorted vegetables breaded and fried, served with lo mein on the side</p>
+                </div>
+            </div>
+            <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
+        </div>
+
+        <div class="menu-item-tile col-md-6">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="menu-item-photo">
+                        <div>SP6</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Sp/Sp-6.jpg" alt="Item">
+                    </div>
+                    <div class="menu-item-price">$21.95</div>
+                </div>
+                <div class="menu-item-description col-sm-6">
+                    <h3 class="menu-item-title">Grilled Veal</h3>
+                    <p class="menu-item-details">marinated and grilled veal served with vegetables and lo mein on the side</p>
+                </div>
+            </div>
+            <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
+        </div>
+
+        <div class="menu-item-tile col-md-6">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="menu-item-photo">
+                        <div>SP7</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Sp/Sp-7.jpg" alt="Item">
+                    </div>
+                    <div class="menu-item-price">$21.95</div>
+                </div>
+                <div class="menu-item-description col-sm-6">
+                    <h3 class="menu-item-title">Orange Beef</h3>
+                    <p class="menu-item-details">a few cuts of beef, breaded, deep-fried with sauce containing orange peels; served with lo mein on the side</p>
+                </div>
+            </div>
+            <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
+        </div>
+
+        <div class="menu-item-tile col-md-6">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="menu-item-photo">
+                        <div>SP2</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Sp/Sp-2.jpg" alt="Item">
+                    </div>
+                    <div class="menu-item-price">$20.95</div>
+                </div>
+                <div class="menu-item-description col-sm-6">
+                    <h3 class="menu-item-title">Teriyaki Chicken</h3>
+                    <p class="menu-item-details">marinated grilled chicken breast with vegetables and lo mein on the side</p>
+                </div>
+            </div>
+            <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
+        </div>
+
+        <!-- Add after every 2nd menu-item-tile -->
+         <div class="clearfix d-none d-md-block d-lg-none"></div>
+
     </section>
 </div><!-- End of #main-content -->
 
