--- a/desserts.html
+++ b/desserts.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="static/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -21,12 +21,12 @@
 <header>
     <nav id="header-nav" class="navbar navbar-expand-lg navbar-light bg-warning">
         <a class="navbar-brand d-none d-lg-block" href="index.html">
-            <img id="logo" src="../static/images/restaurant-logo.png" alt="Logo-image">
+            <img id="logo" src="static/images/restaurant-logo.png" alt="Logo-image">
         </a>
 
         <div id="navbar-brand" class="navbar-brand align-self-start">
             <a href="index.html"><h1>David Chu's China Bistro</h1></a>
-            <p><img src="../static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
+            <p><img src="static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
         </div>
 
         <button id="button1" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsable-nav"
@@ -87,22 +87,22 @@
 
 
 <div id="main-content" class="container">
-    <h2 id="menu-categories-title" class="text-center mt-5">Veal Menu</h2>
+    <h2 id="menu-categories-title" class="text-center my-5">Desserts Menu</h2>
 
     <section class="row">
         <div class="menu-item-tile col-md-6">
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>F2</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/F/F-2.jpg"
-                             alt="Item">
+                        <div>DS1</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/DS/DS-1.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$15.45<span> (pint)</span> $21.45 <span>(large)</span></div>
+                    <div class="menu-item-price">$4.50 <span>slice</span></div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Hunan Veal</h3>
-                    <p class="menu-item-details">veal sauteed with broccoli, mushrooms, and carrots in spicy Hunan sauce</p>
+                    <h3 class="menu-item-title">Chocolate Truffle Cake</h3>
+                    <p class="menu-item-details">Layers of German chocolate cake are soaked in rum to moist perfection.
+                        Extravagant amounts of chocolate create special truffle filling, and a superb chocolate ganache icing to cover this entire indulgence.</p>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none">
@@ -113,113 +113,22 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>F9</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/F/F-9.jpg" alt="Item">
+                        <div>DS2</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/DS/DS-2.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$15.45<span> (pint)</span> $21.45 <span>(large)</span></div>
+                    <div class="menu-item-price">$4.50 <span>slice</span></div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Kung Pao Veal</h3>
-                    <p class="menu-item-details">sliced veal sauteed with peanuts and celery in delicious Kung Pao sauce</p>
+                    <h3 class="menu-item-title">Cappuccino Apricot Cake</h3>
+                    <p class="menu-item-details">This cake combines coffee liquer and espresso cream complimented with a pure apricot jam, layered between cappuccino chiffon.</p>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
         </div>
+
 
         <!-- Add after every 2nd menu-item-tile -->
          <div class="clearfix d-none d-md-block d-lg-none"></div>
-
-        <div class="menu-item-tile col-md-6">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="menu-item-photo">
-                        <div>F10</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/F/F-10.jpg" alt="Item">
-                    </div>
-                    <div class="menu-item-price">$15.45<span> (pint)</span> $21.45 <span>(large)</span></div>
-                </div>
-                <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Mongolian Veal</h3>
-                    <p class="menu-item-details">veal sauteed with onions, green onions, and bamboo shoots in chef's sauce</p>
-                </div>
-            </div>
-            <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
-        </div>
-
-        <div class="menu-item-tile col-md-6">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="menu-item-photo">
-                        <div>F3</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/F/F-3.jpg" alt="Item">
-                    </div>
-                    <div class="menu-item-price">$15.45<span> (pint)</span> $21.45 <span>(large)</span></div>
-                </div>
-                <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Szechuan Veal</h3>
-                    <p class="menu-item-details">veal sauteed with carrots, celery, and bean sprouts in Szechuan sauce</p>
-                </div>
-            </div>
-            <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
-        </div>
-
-        <!-- Add after every 2nd menu-item-tile -->
-         <div class="clearfix d-none d-md-block d-lg-none"></div>
-
-        <div class="menu-item-tile col-md-6">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="menu-item-photo">
-                        <div>F5</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/F/F-5.jpg" alt="Item">
-                    </div>
-                    <div class="menu-item-price">$15.45<span> (pint)</span> $21.45 <span>(large)</span></div>
-                </div>
-                <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Veal with Garlic Sauce</h3>
-                    <p class="menu-item-details">sliced veal sauteed with mushrooms, string beans, and water chestnuts in garlic sauce</p>
-                </div>
-            </div>
-            <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
-        </div>
-
-        <div class="menu-item-tile col-md-6">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="menu-item-photo">
-                        <div>F8</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/F/F-8.jpg" alt="Item">
-                    </div>
-                    <div class="menu-item-price">$15.45<span> (pint)</span> $21.45 <span>(large)</span></div>
-                </div>
-                <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Veal with Green Peppers</h3>
-                    <p class="menu-item-details">sliced veal sauteed with onions and green peppers in brown sauce</p>
-                </div>
-            </div>
-            <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
-        </div>
-
-        <div class="menu-item-tile col-md-6">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="menu-item-photo">
-                        <div>F4</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/F/F-4.jpg" alt="Item">
-                    </div>
-                    <div class="menu-item-price">$15.45<span> (pint)</span> $21.45 <span>(large)</span></div>
-                </div>
-                <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Veal with Mixed Vegetables</h3>
-                    <p class="menu-item-details">sliced veal sauteed with carrots, broccoli, snow peas, string beans, water chestnuts, and mushrooms in brown sauce</p>
-                </div>
-            </div>
-            <hr class="d-none d-block d-sm-none" style="background-color: #FFFF;">
-        </div>
-
-        <!-- Add after every 2nd menu-item-tile -->
-         <div class="clearfix d-none d-md-block d-lg-none"></div>
-
     </section>
 </div><!-- End of #main-content -->
 
