--- a/duck.html
+++ b/duck.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="static/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -21,12 +21,12 @@
 <header>
     <nav id="header-nav" class="navbar navbar-expand-lg navbar-light bg-warning">
         <a class="navbar-brand d-none d-lg-block" href="index.html">
-            <img id="logo" src="../static/images/restaurant-logo.png" alt="Logo-image">
+            <img id="logo" src="static/images/restaurant-logo.png" alt="Logo-image">
         </a>
 
         <div id="navbar-brand" class="navbar-brand align-self-start">
             <a href="index.html"><h1>David Chu's China Bistro</h1></a>
-            <p><img src="../static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
+            <p><img src="static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
         </div>
 
         <button id="button1" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsable-nav"
@@ -87,20 +87,21 @@
 
 
 <div id="main-content" class="container">
-    <h2 id="menu-categories-title" class="text-center my-5">Side Orders Menu</h2>
+    <h2 id="menu-categories-title" class="text-center my-5">Duck Menu</h2>
 
     <section class="row">
         <div class="menu-item-tile col-md-6">
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>SO6</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/SO/SO-6.jpg" alt="Item">
+                        <div>DK1</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Dk/Dk-1.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$2.50 </div>
+                    <div class="menu-item-price">$28.95 <span> (pint)</span> $52.95 <span>(large)</span></div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Fortune Cookies (12)</h3>
+                    <h3 class="menu-item-title">Peking Duck</h3>
+                    <p class="menu-item-details">marinated duck roasted crisp and served with pancake and green onion with special sauce</p>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none">
@@ -110,13 +111,14 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>SO3</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/SO/SO-3.jpg" alt="Item">
+                        <div>DK2</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Dk/Dk-2.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$3.50 <span> (pint)</span> $6.50 <span>(large)</span></div>
+                    <div class="menu-item-price">$32.95 </div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Brown Rice</h3>
+                    <h3 class="menu-item-title">Crispy Duck</h3>
+                    <p class="menu-item-details">boneless duck meat, lightly breaded, deep fried to a crisp, topped with vegetables in chef's special sauce</p>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none">
@@ -126,66 +128,18 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>SO1</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/SO/SO-1.jpg" alt="Item">
+                        <div>DK3</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Dk/Dk-3.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$9.50 </div>
+                    <div class="menu-item-price">$32.95 </div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Chicken Nuggets with French Fries</h3>
+                    <h3 class="menu-item-title">Duck with Vegetables</h3>
+                    <p class="menu-item-details">sliced lean duck meat sauteed with mixed vegtables in brown sauce</p>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none">
         </div>
-
-        <div class="menu-item-tile col-md-6">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="menu-item-photo">
-                        <div>SO2</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/SO/SO-2.jpg" alt="Item">
-                    </div>
-                    <div class="menu-item-price">$5.95 </div>
-                </div>
-                <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">French Fries</h3>
-                </div>
-            </div>
-            <hr class="d-none d-block d-sm-none">
-        </div>
-
-        <div class="menu-item-tile col-md-6">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="menu-item-photo">
-                        <div>SO5</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/SO/SO-5.jpg" alt="Item">
-                    </div>
-                    <div class="menu-item-price">$3.50 <span> (pint)</span> $6.50 <span>(large)</span></div>
-                </div>
-                <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Extra Fried Rice</h3>
-                </div>
-            </div>
-            <hr class="d-none d-block d-sm-none">
-        </div>
-
-        <div class="menu-item-tile col-md-6">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="menu-item-photo">
-                        <div>SO4</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/SO/SO-4.jpg" alt="Item">
-                    </div>
-                    <div class="menu-item-price">$3.50 <span> (pint)</span> $6.50 <span>(large)</span></div>
-                </div>
-                <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Extra White Rice</h3>
-                </div>
-            </div>
-            <hr class="d-none d-block d-sm-none">
-        </div>
-
 
         <!-- Add after every 2nd menu-item-tile -->
          <div class="clearfix d-none d-md-block d-lg-none"></div>
