--- a/mei-fan.html
+++ b/mei-fan.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="static/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -21,12 +21,12 @@
 <header>
     <nav id="header-nav" class="navbar navbar-expand-lg navbar-light bg-warning">
         <a class="navbar-brand d-none d-lg-block" href="index.html">
-            <img id="logo" src="../static/images/restaurant-logo.png" alt="Logo-image">
+            <img id="logo" src="static/images/restaurant-logo.png" alt="Logo-image">
         </a>
 
         <div id="navbar-brand" class="navbar-brand align-self-start">
             <a href="index.html"><h1>David Chu's China Bistro</h1></a>
-            <p><img src="../static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
+            <p><img src="static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
         </div>
 
         <button id="button1" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsable-nav"
@@ -87,21 +87,21 @@
 
 
 <div id="main-content" class="container">
-    <h2 id="menu-categories-title" class="text-center my-5">Noodles (Lo Mein) Menu</h2>
+    <h2 id="menu-categories-title" class="text-center my-5">Mei Fan (Very Fine Noodles) Menu</h2>
 
     <section class="row">
         <div class="menu-item-tile col-md-6">
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>NL3</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/NL/NL-3.jpg" alt="Item">
+                        <div>NF4</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/NF/NF-4.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$12.25 <span> (pint)</span> $15.25 <span>(large)</span></div>
+                    <div class="menu-item-price">$17.95 </div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Beef Lo Mein</h3>
-                    <p class="menu-item-details">beef, onions, and bean sprouts sauteed with soft lo mein noodles</p>
+                    <h3 class="menu-item-title">Beef Mei Fan</h3>
+                    <p class="menu-item-details">beef sauteed with onions and bean sprouts</p>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none">
@@ -111,14 +111,14 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>NL2</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/NL/NL-2.jpg" alt="Item">
+                        <div>NF2</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/NF/NF-2.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$12.25 <span> (pint)</span> $15.25 <span>(large)</span></div>
+                    <div class="menu-item-price">$17.95 </div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Chicken Lo Mein</h3>
-                    <p class="menu-item-details">white meat chicken, onions, and bean sprouts sauteed with soft lo mein noodles</p>
+                    <h3 class="menu-item-title">Chicken Mei Fan</h3>
+                    <p class="menu-item-details">white meat chicken sauteed with onions and bean sprouts</p>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none">
@@ -128,14 +128,31 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="menu-item-photo">
-                        <div>NL1</div>
-                        <img class="img-responsive" width="250" height="150" src="../static/images/menu/NL/NL-1.jpg" alt="Item">
+                        <div>NF4</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/NF/NF-4.jpg" alt="Item">
                     </div>
-                    <div class="menu-item-price">$11.25 <span> (pint)</span> $14.25 <span>(large)</span></div>
+                    <div class="menu-item-price">$19.95 </div>
                 </div>
                 <div class="menu-item-description col-sm-6">
-                    <h3 class="menu-item-title">Vegetable Lo Mein</h3>
-                    <p class="menu-item-details">broccoli, carrots, onions, snow peas, and bean sprouts sauteed with soft lo mein noodles</p>
+                    <h3 class="menu-item-title">House Special Mei Fan</h3>
+                    <p class="menu-item-details">white meat chicken, beef, and veal sauteed with onions and bean sprouts</p>
+                </div>
+            </div>
+            <hr class="d-none d-block d-sm-none">
+        </div>
+
+        <div class="menu-item-tile col-md-6">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="menu-item-photo">
+                        <div>NF1</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/NF/NF-1.jpg" alt="Item">
+                    </div>
+                    <div class="menu-item-price">$15.95 </div>
+                </div>
+                <div class="menu-item-description col-sm-6">
+                    <h3 class="menu-item-title">Vegetable Mei Fan</h3>
+                    <p class="menu-item-details">broccoli, snow peas, onions, and bean sprouts sauteed with rice noodles</p>
                 </div>
             </div>
             <hr class="d-none d-block d-sm-none">
