--- a/pan-fried-noodles.html
+++ b/pan-fried-noodles.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="static/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -21,12 +21,12 @@
 <header>
     <nav id="header-nav" class="navbar navbar-expand-lg navbar-light bg-warning">
         <a class="navbar-brand d-none d-lg-block" href="index.html">
-            <img id="logo" src="../static/images/restaurant-logo.png" alt="Logo-image">
+            <img id="logo" src="static/images/restaurant-logo.png" alt="Logo-image">
         </a>
 
         <div id="navbar-brand" class="navbar-brand align-self-start">
             <a href="index.html"><h1>David Chu's China Bistro</h1></a>
-            <p><img src="../static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
+            <p><img src="static/images/star-k-logo.png" alt="Kosher certification"><span>Kosher Certified</span></p>
         </div>
 
         <button id="button1" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsable-nav"
@@ -87,30 +87,97 @@
 
 
 <div id="main-content" class="container">
-    <h2 class="text-center my-5">About Us</h2>
-    <p class="text-center">We are a restaurant serving Chinese food in U.S, Baltimore.</p>
+    <h2 id="menu-categories-title" class="text-center my-5">Pan Fried Noodles Menu</h2>
 
-    <p>It may be hard to tell, but this website does much more than just help you choose a delicious dish from this cozy little restaurant. The website of this restaurant has served over 100,000
-        students all over the world (and counting), teaching them the skills of how to develop a website from scratch.</p>
+    <section class="row">
+        <div class="menu-item-tile col-md-6">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="menu-item-photo">
+                        <div>PF2</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Pf/Pf-2.jpg" alt="Item">
+                    </div>
+                    <div class="menu-item-price">$19.95 </div>
+                </div>
+                <div class="menu-item-description col-sm-6">
+                    <h3 class="menu-item-title">Pan Fried Noodles with Chicken</h3>
+                    <p class="menu-item-details">white meat chicken sauteed with broccoli, snow peas, mushrooms, water chestnuts, and carrots with brown sauce on a bed of crispy crunchy noodles</p>
+                </div>
+            </div>
+            <hr class="d-none d-block d-sm-none">
+        </div>
 
-    <p>The development of this website was part of the curriculum of 2 Coursera.org courses: HTML, CSS, and Javascript for Web Developers and Single Page Web Applications with AngularJS.
-All courses have an option to be taken for free.</p>
+        <div class="menu-item-tile col-md-6">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="menu-item-photo">
+                        <div>PF3</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Pf/Pf-3.jpg" alt="Item">
+                    </div>
+                    <div class="menu-item-price">$19.95 </div>
+                </div>
+                <div class="menu-item-description col-sm-6">
+                    <h3 class="menu-item-title">Pan Fried Noodles with Beef</h3>
+                    <p class="menu-item-details">sliced beef sauteed with broccoli, snow peas, mushrooms, water chestnuts, and carrots with brown sauce on a bed of crispy crunchy noodles</p>
+                </div>
+            </div>
+            <hr class="d-none d-block d-sm-none">
+        </div>
 
-    <p>As of November, 2016, both courses made it to the #1 Top Rated Course spot (among close to 1,800 available courses).</p>
+        <div class="menu-item-tile col-md-6">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="menu-item-photo">
+                        <div>PF4</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Pf/Pf-4.jpg" alt="Item">
+                    </div>
+                    <div class="menu-item-price">$20.95 </div>
+                </div>
+                <div class="menu-item-description col-sm-6">
+                    <h3 class="menu-item-title">Pan Fried Noodles with Veal</h3>
+                    <p class="menu-item-details">sliced veal sauteed with broccoli, snow peas, mushrooms, water chestnuts, and carrots with brown sauce on a bed of crispy crunchy noodles</p>
+                </div>
+            </div>
+            <hr class="d-none d-block d-sm-none">
+        </div>
 
-    <p>To give you a little preview, here is a video from one of the courses:</p>
+        <div class="menu-item-tile col-md-6">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="menu-item-photo">
+                        <div>PF1</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Pf/Pf-1.jpg" alt="Item">
+                    </div>
+                    <div class="menu-item-price">$15.95 </div>
+                </div>
+                <div class="menu-item-description col-sm-6">
+                    <h3 class="menu-item-title">Pan Fried Noodles with Vegetables</h3>
+                    <p class="menu-item-details">broccoli, snow peas, mushrooms, water chestnuts, and carrots sauteed with brown sauce on a bed of crispy crunchy noodles</p>
+                </div>
+            </div>
+            <hr class="d-none d-block d-sm-none">
+        </div>
 
-    <a href="https://youtu.be/YR_rIjUIDeE">Field Trip In a Coding Course? - Web Development Client Visit and Interview</a>
+        <div class="menu-item-tile col-md-6">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="menu-item-photo">
+                        <div>PF5</div>
+                        <img class="img-responsive" width="250" height="150" src="static/images/menu/Pf/Pf-5.jpg" alt="Item">
+                    </div>
+                    <div class="menu-item-price">$21.95 </div>
+                </div>
+                <div class="menu-item-description col-sm-6">
+                    <h3 class="menu-item-title">House Special Pan Fried Noodles</h3>
+                    <p class="menu-item-details">veal, beef, and chicken sauteed with broccoli, snow peas, mushrooms, water chestnuts, and carrots with brown sauce on a bed of crispy crunchy noodles</p>
+                </div>
+            </div>
+            <hr class="d-none d-block d-sm-none">
+        </div>
 
-    <p>The courses and this site was not a labor of just one person. We owe a debt of gratitute to:</p>
-
-    <li>Moshe Chaikin of StoryWithLight.com, who not only filmed and produced the Field Trip video (featured above), but also provided food photography so the users of the site can see a picture of each dish.
-</li>
-
-    <li>Kalman Hazins, who coded the backend service for this website.</li>
-    <li>Finally, the owners of David Chu's China Bistro restaurant who graciously agreed to assist us in this project.</li>
-
-    <p>* The final implementation of this site is done in AngularJS. If you would like the see the version of this site without the Angular framework, click <a href="https://jhu-ep-coursera.github.io/fullstack-course4/examples/Lecture63/after">here.</a></p>
+        <!-- Add after every 2nd menu-item-tile -->
+         <div class="clearfix d-none d-md-block d-lg-none"></div>
+    </section>
 </div><!-- End of #main-content -->
 
 
